crates/plotnik-lib/tests/02-parser/recovery_validation/single_colon_type_annotation.txt
(identifier) @name : Type
------------------ DIAGNOSTICS -------------------
error: type annotations use `::`, not `:`
 --> query.ptk:1:20
  |
1 | (identifier) @name : Type
  |                    ^
  |
help: use `::`
  |
1 | (identifier) @name :: Type
  |                     +
